--- a/styles.css
+++ b/styles.css
@@ -186,3 +186,12 @@ body {
   .edit-button:hover {
     opacity: 0.9;
   }
+
+  .quote {
+    border-radius: 20px;
+    font-size: 16px;
+    color: black;
+    background: white;
+    margin-bottom: 20px;
+    padding: 18px;
+  }
